--- a/index.html
+++ b/index.html
@@ -48,26 +48,26 @@
     <div class="row">
       <label for="example-select">Select example</label>
       <select id="example-select" name="example-select">
-        <option value="1">Select an option</option>
-        <option value="2">Option 1</option>
-        <option value="3">Option 2</option>
-        <option value="4">Option 3</option>
-        <option value="5">Option 4</option>
-        <option value="6">Option 5</option>
-        <option value="7">Option 6</option>
+        <option>Select an option</option>
+        <option value="1">Option 1</option>
+        <option value="2">Option 2</option>
+        <option value="3">Option 3</option>
+        <option value="4">Option 4</option>
+        <option value="5">Option 5</option>
+        <option value="6">Option 6</option>
       </select>
     </div>
 
     <div class="row">
       <label for="example-select-disabled">Select disabled example</label>
       <select id="example-select-disabled" name="example-select-disabled" disabled>
-        <option value="1">Select an option</option>
-        <option value="2">Option 1</option>
-        <option value="3">Option 2</option>
-        <option value="4">Option 3</option>
-        <option value="5">Option 4</option>
-        <option value="6">Option 5</option>
-        <option value="7">Option 6</option>
+        <option value="">Select an option</option>
+        <option value="1">Option 1</option>
+        <option value="2">Option 2</option>
+        <option value="3">Option 3</option>
+        <option value="4">Option 4</option>
+        <option value="5">Option 5</option>
+        <option value="6">Option 6</option>
       </select>
     </div>
 
