Adding 'theme' prefix to themes to avoid collisions

--- a/demo/index.html
+++ b/demo/index.html
@@ -5,8 +5,8 @@
   <title>Formikation default theme sample.</title>
   <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.css"/>
   <link rel="stylesheet" href="../dist/formikation.css"/>
-  <link rel="stylesheet" href="../dist/themes/default.css"/>
-  <link rel="stylesheet" href="../dist/themes/switches.css"/>
+  <link rel="stylesheet" href="../dist/themes/fk-theme-default.css"/>
+  <link rel="stylesheet" href="../dist/themes/fk-theme-switches.css"/>
   <style media="screen">
     body {
       padding: 0 20px;
@@ -32,7 +32,7 @@
 
 <body>
   <h1>Formikation demo</h1>
-  <form  action="./" class="formikation fk-default-theme">
+  <form  action="./" class="formikation fk-theme-default">
     <h2>Default theme</h2>
     <div class="row">
       <label for="example-select">Select example</label>
@@ -109,7 +109,7 @@
       </label>
     </div>
 
-    <div class="fk-switches">
+    <div class="fk-theme-switches">
       <h2>Switches radio and checkboxes theme</h2>
       <div class="row">
         <label>
