--- a/examples.html
+++ b/examples.html
@@ -5,7 +5,7 @@ slug: examples
 ---
 
 <h1>Formikation demo</h1>
- <form  action="./" class="formikation fk-default-theme">
+ <form  action="./" class="formikation fk-theme-default">
    <div class="example-block">
      <h2>Default theme</h2>
      <div class="row">
@@ -77,7 +77,7 @@ slug: examples
 
    <div class="example-block">
      <h2>Switches radio and checkboxes theme</h2>
-     <div class="row fk-switches">
+     <div class="row fk-theme-switches">
        <label>
          <input type="radio" name="example-radios-2" value="1">
          Radio example
