--- a/demo/index.html
+++ b/demo/index.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8">
   <title>Formikation default theme sample.</title>
   <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.css"/>
-  <link rel="stylesheet" href="../dist/formikation.css"/>
-  <link rel="stylesheet" href="../dist/themes/fk-theme-default.css"/>
-  <link rel="stylesheet" href="../dist/themes/fk-theme-switches.css"/>
+  <link rel="stylesheet" href="formikation.css"/>
+  <link rel="stylesheet" href="themes/fk-theme-default.css"/>
+  <link rel="stylesheet" href="themes/fk-theme-switches.css"/>
   <style media="screen">
     body {
       padding: 0 20px;
@@ -223,7 +223,7 @@
 
 
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-  <script src="../src/formikation.js"></script>
-  <script src="./ready.js"></script>
+  <script src="formikation.js"></script>
+  <script src="ready.js"></script>
 </body>
 </html>
